# snort_plugin

./: .gitignore  README.md
OCSMO/: cp_make_run.sh  makefile  run_nsl_32attr.sh
alert_ex/: CMakeLists.txt  alert_ex.cc
dpx/: CMakeLists.txt  dpx.cc
dpx_old/: dpx.cc
file_map/: Tdataframe.cc  Tdataframe.h  Tread_file.cc  Tread_file.h  cp_make_run.sh  main.cc  makefile
mit_darpa_98/: Tbase_dataframe.cc  Tbase_dataframe.h  Tconf_metrix.cc  Tdataframe_gure.cc  Tdataframe_gure.h  Tdataframe_label.cc  Tdataframe_label.h  Tdataframe_list.cc  Tdataframe_list.h  Tdatetime_holder.cc  Tdatetime_holder.h  Tip_port_holder.cc  Tip_port_holder.h  Tolah_label.cc  Tolah_label.h  Trange_holder.cc  Trange_holder.h  Tread_file.cc  Tread_file.h  cp_make.sh  cp_make_run.sh  global_func.cc  main.cc  makefile  run_darpa.sh
mit_darpa_99/: Tbase_dataframe.h  Tconf_metrix.cc  Tconf_metrix.h  Tdataframe_darpa.cc  Tdataframe_darpa.h  Tdataframe_darpa2.cc  Tdataframe_darpa2.h  Tdatetime_holder.h  Tfield_filter_darpa.cc  Tfield_filter_darpa.h  Tip_port_holder.cc  Tip_port_holder.h  Tolah_label.cc  Tolah_label.h  Tread_file.cc  Tread_file.h  Tread_file_darpa.cc  Tread_file_darpa.h  cp_make_run.sh  download.sh  global_func.cc  labeling  (+3 more)
my_rtdtsvm/src/: CMakeLists.txt  ConversationFeatures.cpp  ConversationFeatures.h  ConversationReconstructor.cpp  ConversationReconstructor.h  IpReassembler.cpp  IpReassembler.h  Tbase_dataframe.cc  Tconf_metrix.h  Tdataframe.cc  Tdec_tree.cc  Tdec_tree.h  Tlabel_stat.h  Tmy_dttype.cc  Tmy_svm.cc  Tmy_svm.h  Tread_file.cc  Tread_file.h  Twrite_file.cc  main.cpp
(+1105 files in other folders)
